<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">My Application 1</string>
    <string name="action_settings">Settings</string>
    <string name="toppings">TOPPINGS</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">QUANTITY</string>
    <string name="order">ORDER</string>
    <string name="name">Name</string>
    <string name="large_text">TEXT</string>
    <string name="order_text">"Name: <xliff:g id="name">%1$s</xliff:g>\nAdd whipped cream? <xliff:g id="cream">%2$s</xliff:g>        \nAdd chocolate? <xliff:g id="chocolate">%3$s</xliff:g>     \nQuantity: <xliff:g id="quantity">%4$s</xliff:g>       \nTotal: <xliff:g id="total">%5$s</xliff:g>     \nThank you!\n\n    "</string>
</resources>
  <!-- // "Name: ${findViewById<EditText>(R.id.edit_name).text}\n" +
    //                "Add whipped cream?${findViewById<CheckBox>(R.id.checkbox_cream).isChecked}\n" +
    //                "Add chocolate?${findViewById<CheckBox>(R.id.checkbox_chocolate).isChecked}\n" +
    //                "Quantity: $cups\nTotal: $num ₽\nThank you!"
-->