<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:isScrollContainer="true">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:inputType="text"
            android:hint="@string/name"/>

        <TextView
            android:id="@+id/topping_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings"
            android:textSize="16sp" />


        <CheckBox
            android:id="@+id/checkbox_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topping_text_view"
            android:layout_marginLeft="16dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkbox_chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_cream"
            android:layout_marginLeft="16dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkbox_chocolate"
            android:layout_margin="16dp"
            android:text="@string/quantity"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/relative_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView">

            <Button
                android:id="@+id/plus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="0dp"
                android:onClick="increment"
                android:text="+"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:layout_toRightOf="@+id/plus_button"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="0dp"
                android:layout_toRightOf="@+id/quantity_text_view"
                android:onClick="decrement"
                android:text="-"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button

                android:id="@+id/button_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minus_button"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textColor="@color/black"
                android:textSize="16sp"

                />

        </RelativeLayout>

    </RelativeLayout>
</ScrollView>